--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,15 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
-
-{% block body %}
-    <h1>Edit User</h1>
-
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+{% block title %}Editer mon profile
 {% endblock %}
 
+{% block body %}
 
+	<div class="video-bg">
+		<video width="320" height="240" autoplay loop muted>
+			<source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
+			Votre navigateur ne supporte pas les backgrounds SCSS
+		</video>
+	</div>
+	<div class="dark-light">
+		<svg viewbox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+			<path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg>
+	</div>
+	<div class="app">
+		{% include "partials/header1.html.twig" %}
+		<div class="wrapper">
+			<div class="left-side">
+				<div class="side-wrapper">
+					{% include "partials/navleft.html.twig" %}
+				</div>
+			</div>
+			<div class="main-container">
+				{% include "partials/headermobile.html.twig" %}
+				<div class="content-wrapper">
+		<div class="w-75 m-auto">
+							{{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+                            {# la fonction delete n'est pas possible si le user a des commandes donc je l'ai desactiver jusqu'a nouvelle ordre #}
+							{# {{ include('user/_delete_form.html.twig') }} #}
+        
+        </div>
+
+
+
+				
+
+				</div>
+			</div>
+		</div>
+		<div class="overlay-app"></div>
+	</div>
+
+
+{% endblock %}
