MAJ card vue new order

--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -32,13 +32,14 @@
 
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						<div class="content-wrapper-context container"><h1 class="container text-center ">Merci de commander 
-					</h1></div>
+						
+							<h1>Commander votre course !
+							</h1>
+						
 					</div>
 
 					{# formulaire inscription  #}
-	{{ include('order/_form.html.twig') }}
-				{# fin du foàrmulaire  #}
+					{{ include('order/_form.html.twig') }}
 
 
 				</div>
