--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
+	<title>Site Transports de izydrive</title>
 		<meta charset="UTF-8">
-		
+		    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+			 <meta name="description" content="ce site permet de mettre en valeur nos compétences en tant que junior dev par la mise en place d'un site VTC destinés pouir les professionnels du transports">
+			
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
