MAJ base bug responsive avec inspecter de google chrome

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-	<title>Site Transports de izydrive</title>
+		<title>Site Transports de izydrive</title>
 		<meta charset="UTF-8">
-		    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-			 <meta name="description" content="ce site permet de mettre en valeur nos compétences en tant que junior dev par la mise en place d'un site VTC destinés pouir les professionnels du transports">
-			
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="ce site permet de mettre en valeur nos compétences en tant que junior dev par la mise en place d'un site VTC destinés pouir les professionnels du transports">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.0/cyborg/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+		<link
+		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		{# pour mettre vos styles css  #}
-		<link rel="stylesheet" href="{{ asset('assets/css/master.css')}}" >
-
+		<link rel="stylesheet" href="{{ asset('assets/css/master.css')}}">
 
 
 		{% block stylesheets %}
@@ -28,7 +28,7 @@
 	</head>
 	<body>
 		{# {% include "partials/header.html.twig" %} #}
-		
+
 
 		{% block body %}{% endblock %}
 		{# {% include "partials/footer.html.twig" %} #}
