+ logo izy drive

--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -1,6 +1,7 @@
 {# -----header desktop----- #}
 <header class="header">
-	<div class="menu-circle"></div>
+	{# <div class="menu-circle"></div> #}
+	<div class="desk"><img src="{{asset('assets/images/logo.png')}}" alt="logo izy drive"></div>
 	<a class="menuSelector mob text-white">
 		<i class="fas fa-bars"></i>
 		<i class="fas fa-times"></i>
