--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -860,7 +860,7 @@ body.light-mode .video-bg:before {
  border-radius: 10px;
 }
 
-// ----Header-----
+// ----Header-----Soufiane---
 @media screen and (max-width: 1050px) {
 .desk{
   display: none;
@@ -889,6 +889,8 @@ body.light-mode .video-bg:before {
 
 .fa-times { display: none; }
 
+// ----END--Soufiane----
+
 // card a  propos 
 
 .apps-card {
@@ -900,4 +902,6 @@ body.light-mode .video-bg:before {
    
  }
 }
+
+
 
