+maj carousel navleft +++page disposition

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,11 @@
 		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		{# pour mettre vos styles css  #}
 		<link rel="stylesheet" href="{{ asset('assets/css/master.css')}}">
+		{# lien daoud a #}
+
+		  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+		{# fin daodua  #}
 
 
 		{% block stylesheets %}
@@ -34,6 +39,8 @@
 		{# {% include "partials/footer.html.twig" %} #}
 
 		{% include "partials/scripts.html.twig" %}
+
+		 
 
 	</body>
 </html>
