--- a/templates/navleft/services/disposition.html.twig
+++ b/templates/navleft/services/disposition.html.twig
@@ -30,51 +30,132 @@
 			<div class="main-container">
 				{% include "partials/headermobile.html.twig" %}
 				<div class="content-wrapper">
+
 					<div class="content-wrapper-header " style="padding:0px; border:0px">
 						<img id="dispositionimage" class="content-wrapper-img mt-1 h-100 rounded  w-100 animate__animated animate__rotateInDownRight" src="https://www.vtc-avignon-provence.com/medias/images/visite-guidee-de-la-provence-location-de-voiture-avec-chauffeur-1.jpg?fx=r_700_146" alt="">
 					</div>
+
+
 					{# <h3 class="img-content text-center container animate__animated animate__rotateInDownRight">Daouda </h3> #}
 					<div
 						class="content-section">
 						{# <div class="content-section-title">Apps in your plan</div> #}
-						<div class="apps-card">
-							{# caroussel  #}
-							{# <div class="contenu_carou_auto"> <div style="top:0%;" class="caroussel-image">
-																<img src="{{asset('assets/images/izydrive2.jpeg')}}" alt>
-																<img src="{{asset('assets/images/izydrive.jpeg')}}" alt>
-																<img src="{{asset('assets/images/chauffeurvtc.png')}}" alt>
-																<img src="{{asset('assets/images/izydrive.jpeg')}}" alt>
-																<img src="{{asset('assets/images/izydrive2.jpeg')}}" alt>
-																<img src="{{asset('assets/images/chauffeurvtc.png')}}" alt>
-																<img src="{{asset('assets/images/izydrive1.jpeg')}}" alt>
-																<img src="{{asset('assets/images/chauffeurvtc.png')}}" alt>
-																<img src="{{asset('assets/images/izydrive1.jpeg')}}" alt>
-															</div>
-														</div> #}
+						<div
+							class="apps-card">
 
-								<div class="bd-example"> <div id="carouselExampleCaptions" class="carousel slide pointer-event" data-ride="carousel">
-									<ol class="carousel-indicators">
-										<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-										<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-									</ol>
-									<div class="carousel-inner" role="listbox">
-										<div class="carousel-item active">
-											{# <img class="rounded d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [900x300]" src="{{asset('assets/images/vtcslider2.png')}}" data-holder-rendered="true"> #}
-											<h1 class="bg-light text-dark container text-center">Service à votre disposition </h1>
-											<p>L'entreprise Izydrive propose une solution qui est complètement adaptée pour les professionnels du milieu VTC de transports de personnes ayant besoin d'optimiser la gestion de la clientèle par le biasi de son site sur lequel le client peut réserver avec plusieurs moyens et aussi atteindre leur objectif premier à savoir d’augmenter leur chiffre d’affaire.</p>
-											<p> Découvrez donc dès maintenant l’ensemble des fonctionnalités lors de la création de votre site internet vtc et surtout comment nous pouvons vous aider à augmenter votre portefeuille client ainsi que le nombre de vos réservations en ayant rapidement vos premiers visiteurs sur votre site internet !</p>
-											<div class="carousel-caption d-none d-md-block"></div>
+							{# caroussel  #}
+							<div class="bd-example">
+								<div class="container">
+									<div class="slider h-100">
+
+										<div class="box1 box">
+											<div class="bg"></div>
+											<div class="details">
+												<h1>I'm the first Box</h1>
+												<p>
+													Lorem ipsum dolor sit amet, consectetur adipiscing 
+																									                            elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+																									                            diam, ac mattis orci pellentesque eget.
+												</p>
+												{# <button>Check Now</button> #}
+											</div>
+
+											<div class="illustration">
+												<div class="inner"></div>
+											</div>
 										</div>
-										<div class="carousel-item">
-											<img class="rounded d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="{{asset('assets/images/vtcslider1.png')}}" data-holder-rendered="true">
-											<div class="carousel-caption d-none d-md-block"></div>
+
+
+										<div class="box2 box">
+											<div class="bg"></div>
+											<div class="details">
+												<h1>I'm the second Box</h1>
+												<p>
+													Lorem ipsum dolor sit amet, consectetur adipiscing 
+																									                            elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+																									                            diam, ac mattis orci pellentesque eget.
+												</p>
+												{# <button>Check Now</button> #}
+											</div>
+
+											<div class="illustration">
+												<div class="inner"></div>
+											</div>
 										</div>
+
+										<div class="box3 box">
+											<div class="bg"></div>
+											<div class="details">
+												<h1>I'm the third Box</h1>
+												<p>
+													Lorem ipsum dolor sit amet, consectetur adipiscing 
+																									                            elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+																									                            diam, ac mattis orci pellentesque eget.
+												</p>
+												{# <button>Check Now</button> #}
+											</div>
+
+											<div class="illustration">
+												<div class="inner"></div>
+											</div>
+										</div>
+
+										<div class="box4 box">
+											<div class="bg"></div>
+											<div class="details">
+												<h1>I'm the fourth Box</h1>
+												<p>
+													Lorem ipsum dolor sit amet, consectetur adipiscing 
+																									                            elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+																									                            diam, ac mattis orci pellentesque eget.
+												</p>
+												{# <button>Check Now</button> #}
+											</div>
+
+											<div class="illustration">
+												<div class="inner"></div>
+											</div>
+										</div>
+
+										<div class="box5 box">
+											<div class="bg"></div>
+											<div class="details">
+												<h1>I'm the fifth Box</h1>
+												<p>
+													Lorem ipsum dolor sit amet, consectetur adipiscing 
+																									                            elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+																									                            diam, ac mattis orci pellentesque eget.
+												</p>
+												{# <button>Check Now</button> #}
+											</div>
+
+											<div class="illustration">
+												<div class="inner"></div>
+											</div>
+										</div>
+
+									</div>
+
+									{# <svg xmlns="http://www.w3.org/2000/svg" class="prev" width="56.898" height="91" viewbox="0 0 56.898 91"><path d="M45.5,0,91,56.9,48.452,24.068,0,56.9Z" transform="translate(0 91) rotate(-90)" fill="#fff"/></svg>
+																	<svg xmlns="http://www.w3.org/2000/svg" class="next" width="56.898" height="91" viewbox="0 0 56.898 91"><path d="M45.5,0,91,56.9,48.452,24.068,0,56.9Z" transform="translate(56.898) rotate(90)" fill="#fff"/></svg> #}
+									<div class="trail">
+										<div class="box1 active">1</div>
+										<div class="box2">2</div>
+										<div class="box3">3</div>
+										<div class="box4">4</div>
+										<div class="box5">5</div>
 									</div>
 								</div>
+
+								<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+								<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
+								<script src="script.js"></script>
+								<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.2/gsap.min.js"></script>
+															        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.2/CSSRulePlugin.min.js"></script> -->
+
 							</div>
-
-
 							{# fin caroussel  #}
+
 						</div>
 					</div>
 				</div>
@@ -82,4 +163,5 @@
 		</div>
 	</div>
 	<div class="overlay-app"></div>
+
 </div>{% endblock %}
