--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -7,26 +7,26 @@
 		<i class="fas fa-times"></i>
 	</a>
 	<div class="header-menu">
-		<a class="menu-link is-active desk" href="{{path('home_page')}}">Accueil</a>
-		<a class="menu-link notify desk" href="{{path('app_order_new')}}">Commander une course</a>
+		<a class="menu-link is-active desk hvr-grow" href="{{path('home_page')}}">Accueil</a>
+		<a class="menu-link notify desk hvr-grow" href="{{path('app_order_new')}}">Commander une course</a>
 		{% if is_granted('ROLE_ADMIN') %}
-			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
-			<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
+			<a class="menu-link notify desk hvr-grow" href="{{path('show_user')}}">Mon profil</a>
+			<a class="menu-link desk hvr-grow" href="{{path('app_contact')}}">Contact</a>
 		{% elseif is_granted('ROLE_USER') %}
-			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
-			<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
-			<a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a>
+			<a class="menu-link notify desk hvr-grow" href="{{path('show_order')}}">Mes commandes</a>
+			<a class="menu-link notify desk hvr-grow" href="{{path('show_user')}}">Mon profil</a>
+			<a class="menu-link desk hvr-grow" href="{{path('app_contact')}}">Contact</a>
 
 		{% else %}
-			<a class="menu-link notify desk" href="{{path('show_user')}}">Connexion</a>
-			<a class="menu-link notify desk" href="{{path('app_register')}}">Inscription</a>
-			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
+			<a class="menu-link notify desk hvr-grow" href="{{path('show_user')}}">Connexion</a>
+			<a class="menu-link notify desk hvr-grow" href="{{path('app_register')}}">Inscription</a>
+			<a class="menu-link desk hvr-grow" href="{{path('app_contact')}}">Contact</a>
 		{% endif %}
 	</div>
 
 	<div class="header-profile">
 	{% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER')  %}
-		<a href="{{path('app_logout')}}" class="text-white pr-3 deco">
+		<a href="{{path('app_logout')}}" class="text-white pr-3 deco hvr-grow">
 			<i class="fas fa-sign-out-alt animate__backInDown animate__animated"></i>
 		</a>
 		
