--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -1,26 +1,27 @@
 {# -----header desktop----- #}
 <header class="header">
 	{# <div class="menu-circle"></div> #}
-	<div class="desk"><img src="{{asset('assets/images/logo.png')}}" alt="logo izy drive"></div>
+	<div class="desk pr-4"><img src="{{asset('assets/images/logo.png')}}" alt="logo izy drive"></div>
 	<a class="menuSelector mob text-white">
 		<i class="fas fa-bars"></i>
 		<i class="fas fa-times"></i>
 	</a>
 	<div class="header-menu">
-		<a class="menu-link is-active desk hvr-grow" href="{{path('home_page')}}">Accueil</a>
-		<a class="menu-link notify desk hvr-grow" href="{{path('app_order_new')}}">Commander une course</a>
+		<a class="menu-link is-active desk" href="{{path('home_page')}}">Accueil</a>
+		<a class="menu-link notify desk" href="{{path('app_order_new')}}">Commander une course</a>
 		{% if is_granted('ROLE_ADMIN') %}
-			<a class="menu-link notify desk hvr-grow" href="{{path('show_user')}}">Mon profil</a>
-			<a class="menu-link desk hvr-grow" href="{{path('app_contact')}}">Contact</a>
+			<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
+			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
+			<a class="menu-link desk" href="{{path('admin')}}">Dashboard</a>
 		{% elseif is_granted('ROLE_USER') %}
-			<a class="menu-link notify desk hvr-grow" href="{{path('show_order')}}">Mes commandes</a>
-			<a class="menu-link notify desk hvr-grow" href="{{path('show_user')}}">Mon profil</a>
-			<a class="menu-link desk hvr-grow" href="{{path('app_contact')}}">Contact</a>
+			<a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a>
+			<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
+			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
 
 		{% else %}
-			<a class="menu-link notify desk hvr-grow" href="{{path('show_user')}}">Connexion</a>
-			<a class="menu-link notify desk hvr-grow" href="{{path('app_register')}}">Inscription</a>
-			<a class="menu-link desk hvr-grow" href="{{path('app_contact')}}">Contact</a>
+			<a class="menu-link notify desk" href="{{path('show_user')}}">Connexion</a>
+			<a class="menu-link notify desk" href="{{path('app_register')}}">Inscription</a>
+			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
 		{% endif %}
 	</div>
 
