+Ajout de la propriété image dans entité user
Afin d'afficher l'image de profile dans la vue user si inscrit bien-sûr.

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -41,6 +41,7 @@
 			{{ form_row(registrationForm.firstname,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.lastname,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.email,  {'attr':{'class':'form form-control'}}) }}
+					{{ form_row(registrationForm.image,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.adresse,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.age,  {'attr':{'class':'form form-control'}}) }}
 
