--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -13,6 +13,7 @@
                 {# <th>Password</th> #}
                 <th>Lastname</th>
                 <th>Firstname</th>
+                <th>Photo</th>
                 <th>Age</th>
                 <th>Adresse</th>
                 <th>actions</th>
@@ -27,6 +28,7 @@
                 {# <td>{{ user.password }}</td> #}
                 <td>{{ user.lastname }}</td>
                 <td>{{ user.firstname }}</td>
+                  <td>{{ user.image }}</td>
                 <td>{{ user.age }}</td>
                 <td>{{ user.adresse }}</td>
                 <td>
