--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -49,7 +49,7 @@
 								</a>
 							</button>
 						</div>
-						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
+						<img width="50px" height="200px" class="content-wrapper-img rounded-circle" src="{{ app.user.image }}" alt="image de profile">
 					</div>
 
 				</div>
