--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -41,7 +41,7 @@
             </tr>
         </tbody>
     </table>
-
+<img width="50px" height="50px"  class="content-wrapper-img rounded-circle" src="{{ user.image }}" alt="image de profile">
     <a href="{{ path('app_user_index') }}">back to list</a>
 
     <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
