--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -889,6 +889,15 @@ body.light-mode .video-bg:before {
 
 .fa-times { display: none; }
 
+// ---liste--menu--navleft--mobile---
+
+ul {
+  list-style-type: none;
+}
+.text-none{
+  text-decoration: none;
+
+}
 // ----END--Soufiane----
 
 // card a  propos 
