--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -78,7 +78,7 @@
 						class="content-section">
 						{# <div class="content-section-title">Apps in your plan</div> #}
 						<div class="apps-card">
-							<article class="app-card">
+							<article class="app-card h-100">
 								<span>
 									Un tarif connu à l’avance et sans surprise à l’arrivée
 								</span>
@@ -90,20 +90,20 @@
 								</div>
 							</article>
 
-							<article class="app-card">
+							<article class="app-card h-100">
 								<span>
 									Facilité de paiement
 								</span>
 								<div class="app-card__subtext">Dans la voiture, vous pourrez régler votre course par carte bancaire ou en espèces. Et pour plus de flexibilité, n’oubliez pas la réservation en ligne offrant la possibilité d’un paiement par CB, Paypal...
 
 								</div>
-								<div class="app-card-buttons"><img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt="image vtc">
+								<div class="app-card-buttons "><img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt="image vtc">
 								{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
 								</div>
 							</article>
 
-							<article class="app-card">
+							<article class="app-card h-100">
 								<span>
 									Accessible 24h/24 et 7 jours/7
 								</span>
