--- a/templates/partials/navleft.html.twig
+++ b/templates/partials/navleft.html.twig
@@ -23,7 +23,7 @@
 						</a>
 						<a href="{{ path('chauffeur') }}">
 
-							Chauffeur Privée
+							Chauffeur Privé
 						</a>
 						<a href="{{ path('visite') }}">
 
