--- a/templates/navleft/legales/conditionsgenerales.html.twig
+++ b/templates/navleft/legales/conditionsgenerales.html.twig
@@ -149,19 +149,138 @@
 																</ul>
 															</div> #}
 					<div class="content-section">
-						<div class="content-section-title">Apps in your plan</div>
-						<div class="apps-card">
-	<div class="app-card">
+						<div class="content-section-title">Condictions generales</div>
+						<div class="apps-card ">
+			<div class="app-card h-100 w-100">
 								<span>
 									IZY DRIVE DANS VOTRE VILLE
 								</span>
-								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card__subtext">PRÉSENTATION
+
+Transport 13 Elegant.com est un service de transport, société par actions simplifiée unipersonnelle au capital 1500€, dont le siège social est au 37 bd Ferdinand Negro 13012 Marseille, France, immatriculée au Registre du commerce et des sociétés de Marseille sous le numéro 820982874 (ci-après la « Société »). Numéro de TVA intracommunautaire : FR 03820982874. La Société fournit un service de déplacement en véhicule de tourisme avec chauffeur fonctionnant exclusivement sur réservation, immédiate ou à l'avance..<br>
+Les présentes Conditions générales constituent le contrat par lequel la société propose et assure le Service et s'appliquent pour les commandes de véhicules passées par le client auprès de la société par téléphone, par Internet via le site www.transport13elegant.com
+En utilisant le service, le client reconnaît et accepte l'ensemble des termes des présentes conditions générales.<br>
+
+1.0 OBJET DU SERVICE<br>
+
+La société fournit un service de transport et met à disposition de ses clients des véhicules de tourisme avec chauffeur. Elle est immatriculée au registre des exploitants de voitures de tourisme avec chauffeur sous le numéro EVTC013165267 et soumise aux dispositions des articles L 231- 1 à L231-4 du Code du tourisme et au décret n°85-891 du 16 aout 1985>
+
+2.0 RÉSERVER UN VÉHICULE<br>
+
+Le client est informé que l'ensemble des véhicules proposés sont du type berline et van. Pour le moment, la société n'est malheureusement pas en mesure de proposer de mise en relation avec des véhicules spécifiques adaptés aux personnes à mobilité réduite.
+Le Service est ouvert tous les jours, 24h/24, et n'est accessible que sur réservation, à l'avance.
+
+2.1 CONDITION PRÉALABLE<br>
+
+La réservation de course via le site est soumise à l’acceptation préalable par le client des présentes Conditions Générales.
+
+2.2 ÉTAPES DE LA RÉSERVATION<br>
+
+Pour réserver, le client se connecte au site en saisissant sa réservation Il renseigne les différents champs relatifs au trajet souhaité (lieu de départ, un lieu de destination, type de voiture). A défaut du renseignement du lieu de départ, le processus de commande ne pourra pas aboutir. En cas de saisie d’un lieu de destination, la société propose un prix pour réaliser le trajet sollicité. Le client est libre d’accepter ou non l’offre proposée par la société; s’il l’accepte, il doit s’être préalablement assuré que toutes les informations affichées sont conformes au trajet souhaité.
+En cas d’absence de saisie d’un lieu de destination, la réservation ne pourra aboutir..
+La société transmet au chauffeur chargé du trajet journalier les éléments de la Commande.
+
+2.3 RÉSERVATION A L’AVANCE<br>
+
+Le client peut réserver un véhicule auprès de la société avant la date et l'heure de départ de la course considérée. Le délai peut être de 1 mois maximum jusqu'à 30 minutes minimum avant l'heure de départ prévue.
+Le client indique la date, l'heure et le lieu de départ, les étapes intermédiaires éventuelles et le point d'arrivée final, les autres particularités éventuelles de la course (,indication complémentaire pour le lieu de rendez-vous, etc), ainsi que les noms et prénoms du passager.
+En fonction du nombre de commandes déjà enregistrées à la date et à l'heure choisie, la société se réserve le droit de refuser les commandes en avance supplémentaires.
+La Société enregistre la commande et prend en compte la recherche du véhicule, sans pour autant procéder à une réservation immédiate d'un véhicule au moment de la commande. La recherche de véhicule est effectuée dans l'heure précédant l'heure de départ prévue, en fonction du lieu de départ, et des conditions de circulation.
+
+2.4 RÉSERVATION AU DÉPART D’UN AÉROPORT<br>
+
+Lors de la réservation, le client doit préciser l'aéroport, la date de la course, et le numéro de vol.
+L'heure prévue d'atterrissage ainsi que le terminal d'arrivée, susceptibles d'être modifiés par les conditions de vol et l'administration aéroportuaire, peuvent être renseignés mais ne sont pas contractuels.
+La responsabilité de la société ne peut être engagée en cas d'informations erronées indiquées par le Client (numéro de vol incomplet, erreur de date), ni en cas d'informations erronées relatives au vol de référence pour la course, transmises par le Service Info de l'aéroport concerné.
+
+2.5 RÉSERVATION PAR TÉLÉPHONE<br>
+
+Le service de commande par téléphone se fait de 6h à 21h et 7 jours sur 7 au moyen d'un appel vers un numéro «non surtaxé » (coût d'un appel local depuis un téléphone fixe).
+
+2.6 RÉSERVATION PAR LE SITE INTERNET<br>
+
+Le client peut effectuer une commande en ligne, via le site Internet www.transport13elegant.com
+La réservation en ligne redirige dès validation vers un site sécurisé Paypal.. Aucun frais supplémentaire n'est prélevé par la société sur le prix de la course, en dehors de l'éventuel surcoût dû au temps d'attente du passager par le chauffeur au point de départ.
+
+2.7 OBLIGATION DU CLIENT<br>
+
+Après validation de la réservation, le client doit se présenter au lieu convenu le jour et l’heure prévu.
+Le client recevra un mail et/ou un sms de confirmation.
+En cas d’attente du chauffeur, des frais d’attente dont le montant est déterminé à l’article 5, lui seront automatiquement facturés au-delà d’un délai de 10 minutes.
+En cas de non-présentation du Client, le Chauffeur est réputé libre de partir après une période d’attente de 30 minutes.
+Le client s'engage à se comporter à bord du véhicule comme un bon père de famille.
+En cas de dégradation de l'équipement ou du véhicule imputables au Client, la Société lui refacturera les frais de remise en état du véhicule ou de changement de matériel.
+Les passagers, adultes et enfants, sont tenus d'attacher leur ceinture de sécurité. Une amende est encourue par les personnes prises en défaut lors d'un contrôle par les forces de l'ordre.
+Pour des raisons de sécurité, il est interdit de fumer et de transporter des substances inflammables, explosives, corrosives ou toxiques. Le non-respect de cette stipulation engage la responsabilité du Client et du passager. La Société se réserve alors la possibilité de tout éventuel recours.
+Les bagages doivent être déposés dans le coffre du véhicule. Les bagages demeurent sous l'entière responsabilité du Client. Aucun bagage ne peut être confié au chauffeur. Le chauffeur pourra refuser les bagages dont le poids ou les dimensions sont excessifs, ainsi que ceux qu'il estime préjudiciables à la sécurité du transport.
+Toute modification du devis de la course initialement prévue et payer à l’avance par le biais du site(attente, parking, arrêt supplémentaire, changement d'adresse...) entraînera des frais additionnels qui sont facturés au client directement auprès du chauffeur.
+
+2.8 OBLIGATIONS DE LA SOCIÉTÉ<br>
+
+Le service offert par la société consiste en une prestation de recherche d'un véhicule disponible correspondant à la réservation du client. La société est ainsi tenue à une simple obligation de moyens et met en œuvre tous ses meilleurs efforts afin de trouver un véhicule disponible pour le Client dans les meilleurs délais.
+A la réception de la demande du Client, en cas de saisie du lieu de destination, la société s’engage à proposer une offre indiquant le prix du trajet..
+Si le client accepte l’offre, la société s’engage à lui adresser une confirmation de la Commande par mail et/ou sms.
+
+3.0 ANNULATION DE LA RÉSERVATION<br>
+
+Toutes les conditions d’annulation sont définies dans les présentes Conditions Générales.
+Si le véhicule est déjà arrivé au lieu de départ au moment de l'annulation, la course sera totalement due à la société. Si le client n'a pas annulé la commande avant l'arrivée du véhicule, que le passager ne se présente pas au lieu de départ où le chauffeur ou la société appelle le client au téléphone, la valeur intégrale de la course commandée est facturée au client.
+Le client conserve la possibilité d’annuler la Commande 12 heures avant l’heure effective du début de la course. Dans ce cas l’intégralité du montant de la course lui sera remboursé. Mais dans le cas contraire il s’expose à devoir l’intégralité du montant de la course à la société.
+
+4.0 CONFIDENTIALITÉ-PROTECTION DES DONNÉES PERSONNELLES<br>
+
+Les présentes Conditions Générales sont soumises aux dispositions de la loi n° 78-17 du 6 janvier 1978 relative à l’informatique,aux fichiers et aux libertés.
+Le client dispose d’un droit d’accès, de rectification et de suppression des données à caractère personnel le concernant sur simple demande adressée à la société..
+La société informe le client sur l’utilisation qui est faite des données à caractère personnel le concernant collectées dans le cadre de l’utilisation du site
+La société peut communiquer à des tiers les coordonnées du client pour les besoins de l’utilisation du site et notamment au Chauffeur. Le Client dispose bien entendu d'un droit d'opposition (par tout moyen et notamment courrier simple adressé à la société) à la cession à des tiers à des fins de prospection commerciale des informations nominatives détenues sur sa personne.
+Le client accepte que la société se réserve la possibilité d’enregistrer et de conserver, à des fins de preuve, l’ensemble des informations relatives aux connexions effectuées, telles que les données relatives aux trajets effectués et les coordonnées personnelles du Client.
+
+5.0 FRAIS D’ATTENTE<br>
+
+L’attente dans un aéroport comprend 30 minutes gratuite à partir du moment où l'avion a atterri
+L’attente dans une gare comprend 10 minutes gratuite à partir du moment ou le train est arrivé
+Au-delà les frais d’attente par minutes s’élèvent à 1€ pour les berlines et 1,5€ TTC pour les vans et seront à payer en supplément auprès du chauffeur.
+
+6.0 PAIEMENT<br>
+
+Le paiement peut s’effectuer directement sur le site par le biais du site sécurisé Paypal, par lien de paiement à distance PayPlug ou directement auprès du chauffeur par un terminal de cartes bancaire, ou espèces.
+
+7.0 EMISSION DE LA FACTURE<br>
+
+Une fois la réservation payé en ligne, ou réserver directement par téléphone auprès de la centrale, la société envoi au client, par courrier électronique, une facture directement sur l’adresse email qu’il aura communiqué lors de la réservation.
+
+8.0 ÉTENDUE DU TRANSFERT<br>
+
+Le transfert commence à la montée du client dans le véhicule du chauffeur et s’achève à la descente du client de ce même véhicule.
+
+8.1 PRISE EN CHARGE DU CLIENT<br>
+
+Le chauffeur peut refuser de prendre en charge le client. Si un tel refus résulte du comportement du client (état d’ébriété, présence d’un animal dont le poids dépasse 8 kg et non placé en cage, danger pour la sécurité du chauffeur et du véhicule, etc.) ou d’informations incorrectes transmises par le client.
+
+9.0 CONFORMITÉ A LA RÉGLEMENTATION<br>
+
+La société s’engage à que les chauffeurs et les véhicules sont conformes à la réglementation en vigueur en matière d’exploitation de véhicules de tourisme avec chauffeurs.
+
+9.1 ASSURANCE<br>
+
+La société est garantie par une compagnie d'assurances notoirement solvable qui couvre les risques liés à son activité conformément à la législation en vigueur.
+Les passagers sont considérés comme des tiers vis-à-vis du chauffeur, et sont couverts pour l'intégralité des dommages corporels, matériels et immatériels qu'ils pourraient subir consécutivement à un accident de la circulation et ce de façon illimitée pour les dommages corporels, depuis la montée dans le Véhicule jusqu'à la descente, à l'exception des dommages causés par leur faute.
+
+10.0 RÉCLAMATION<br>
+
+Le client peut adresser par Lettre recommandée avec demande d’avis de réception (LRAR) une réclamation auprès de la société à l’adresse suivante : 37 bd Ferdinand Negro ,13012 Marseille, France.
+Toute réclamation relative à un incident survenu en cours de la course sera transmise au Chauffeur, dont la société s’engage à transmettre les coordonnées exactes sur demande du Client.
+
+10.1: DROIT APPLICABLE ET JURIDICTIONS COMPÉTENTES<br>
+
+Les présentes Conditions Générales sont soumises au droit français.
+Les litiges entre commerçants seront soumis exclusivement au Tribunal de Commerce de Marseille.</div>
 								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
 									{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
 								</div>
 							</div>
-							<div class="app-card">
+							{# <div class="app-card">
 								<span>
 									IZY DRIVE DANS VOTRE VILLE
 								</span>
@@ -173,15 +292,16 @@
 								</div>
 							</div>
 
-							<div class="app-card">
-								<span>
+							{# <div class="app-card"> #}
+								{# <span>
 									SERVICE AU KM
 								</span>
 								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
-								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
+								<div class="app-card-buttons" #}
+								>{# <button class="content-button status-button">Update</button> #}
 									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
 									{# <div class="menu"></div> #}
-								</div>
+								{# </div> #}
 							</div>
 						</div>
 					</div>
