--- a/templates/navleft/legales/conditionsgenerales.html.twig
+++ b/templates/navleft/legales/conditionsgenerales.html.twig
@@ -298,7 +298,7 @@ Les litiges entre commerçants seront soumis exclusivement au Tribunal de Commer
 								</span>
 								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
 								<div class="app-card-buttons" #}
-								>{# <button class="content-button status-button">Update</button> #}
+								{# <button class="content-button status-button">Update</button> #}
 									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
 									{# <div class="menu"></div> #}
 								{# </div> #}
