--- a/templates/navleft/legales/apropos.html.twig
+++ b/templates/navleft/legales/apropos.html.twig
@@ -33,9 +33,9 @@
 
 				<div class="content-wrapper m-4 rounded   ">
 					<div >
-						<h3>
+						<h1>
 							Chauffeur privé
-						</h3>	
+						</h1>	
 						<img  src="assets/images/photo-apropos.png" height:"400px" alt"a propos" class="rounded" >
 					<div class="content-text-context mt-5 ">Riche d’une expérience de 20 années dans le secteurs du VTC, IzyDrive c'est la garentis d'un trajet confortable  et 100% sécursé. 
 						Votre chauffeur expérimenté réalisera l'ensemble de vos trajets avec professionnalisme et discrétion. Des services et avantages qui profitent aux particuliers comme au professionnels, entreprises et sociétés.
@@ -43,12 +43,12 @@
 						Modernes et accessibles, retrouvez nos service sur toutes les plateforme partout en France.</div>
 						
 						<div class="content-section ">
-							<div class="content-section-title"> détails</div>
+							<h2 class="content-section-title"> Détails</h2>
 							<div class="apps-card ">
 								<aticle  class="app-card ">
-									<span>
+									<h3>
 										IZY DRIVE DANS VOTRE VILLE
-									</span>
+									</h3>
 									<div class="app-card__subtext ">VTC IZY DRIVE, riche de 20 ans d'expérience est est présent dans toutes les grande ville,.</div>
 									{# <div class="app-card-buttons"><img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#">
 										<button class="content-button status-button">Update</button>
@@ -56,9 +56,9 @@
 									</div> #}
 								</aticle>
 								<article class="app-card">
-									<span>
+									<h3>
 										HORAIRE IZY DRIVE
-									</span>
+									</h3>
 									<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, nous restons joignables 24h/24 6j/7 .
 									</div>
 									<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
@@ -68,15 +68,15 @@
 								</article>
 
 								{# <div class="app-card">
-									<span>
+									<h3>
 										SERVICE AU KM
-									</span>
+									</h3>
 									<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC dans les grandes villes, et vers les aéroports.Pour toute demande d'information complémentaire, n'hésitez pas à nous contacter ou à contacter directement votre chauffeur. A bientôt !</div>
 									</div> #}
 									<article class="app-card">
-                                    <span>
+                                    <h3>
                                         SERVICE IZY DRIVE
-                                    </span>
+                                    </h3>
                                     <div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements dans les grandes villes, et vers les aéroports. Pour toute demande d'information complémentaire, n'hésitez pas à contacter directement votre chauffeur.</div>
 									<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
 										{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
