--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -149,12 +149,12 @@
 																</ul>
 															</div> #}
 					<div class="content-section">
-						<div class="content-section-title">Notre flotte de vehicule</div>
+						<h1 class="content-section-title">Notre flotte de vehicule</h1>
 						<div class="apps-card">
 	<div class="app-card h-100">
-								<span>
+								<h3>
 									MODERNE
-								</span>
+								</h3>
 								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
 								<div class="app-card-buttons"><img src="https://kirotravel.com/wp-content/uploads/2021/05/Voiture-noire.jpeg" alt="#">
 									{# <button class="content-button status-button">Update</button>
@@ -163,9 +163,9 @@
 								</div>
 							</div>
 							<div class="app-card h-100">
-								<span>
+								<h3>
 									COVID 19 ET LES AUTRES
-								</span>
+								</h3>
 								<div class="app-card__subtext"> Tous nos vehicules respectent les normes sanitaire. Equipé de la technologie  son équipé d'un systeme de 
 								
 								Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
@@ -177,9 +177,9 @@
 							</div>
 
 							<div class="app-card h-100">
-								<span>
+								<h3>
 									ÉQUIPEMENT
-								</span>
+								</h3>
 								<div class="app-card__subtext">Vous voyagez en groupe, vous aimez avoir de l’espace ou disposez de nombreux bagages ?
 Déplacez-vous dans l’un de nos vans tout confort pour profiter de son habitabilité maximale. Comme pour nos autres services, nos chauffeurs Vans VTC vous garantiront ponctualité et sécurité pour tous vos déplacements sur Marseille et la région PACA.</div>
 								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
