+Ajout infos méteo

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -33,6 +33,10 @@
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
 						<div class="content-wrapper-context">
+						{{ville}} à {{temperature}}°C
+							<p>{{weather}} et {{ description}}</p>
+							<p>Avec un vent allant de {{vent }}</p>
+							<hr><br>
 							<h2 class="img-content">
 								Votre chauffeur privé
 							</h2>
