+MAJ Méteo + remplacer apropos dans presentations par monhistoire
J'ai mis mon histoire à sa place et à propos dans le sous dossier legales.

La météo s'affiche que sur la page d'accueil pour l'instant. Je suis dessus..............😜😜😜Le Dev

--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -46,6 +46,10 @@
 		</svg> 
 		
 		{# méteo  #}
-		 <hr> <p class="text-white bold my-1 "> | {{ville }}  | {{temperature}}°C</p>
+		
+		 
+		 {# <p class="text-white bold my-1 ">~ {{ville}} | {{temperature}}°C</p> #}
+		
+
 	</div>
 </header>
