MAJ bug meteo header

--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -47,7 +47,7 @@
 		
 		{# méteo  #}	
 		 
-		 {# <p class="text-white bold my-1 ">~ {{ville}} | {{temperature}}°C</p> #}
+		 {# <p class="text-white bold my-1 "> {{ville}} | {{temperature}}°C</p> #}
 		
 
 	</div>
