+Maj branche new front

--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -46,6 +46,6 @@
 
 			
 			
-		</svg>  <hr> <p class="text-white bold my-1 "> | {{ville }}  | {{temperature}}°C</p>
+		{# </svg>  <hr> <p class="text-white bold my-1 "> | {{ville }}  | {{temperature}}°C</p> #}
 	</div>
 </header>
