+table avis + relation user + crud avis // bug crud

--- a/templates/partials/navleft.html.twig
+++ b/templates/partials/navleft.html.twig
@@ -8,7 +8,7 @@
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
 							</a>
-							<a href="{{ path('avis') }}">
+							<a href="{{ path('app_notice_new') }}">
 								Vos avis
 							</a>
 
